tidy up: Ped and Noise parameter are now separated

--- a/test/MonitorO2O/template_SiStripMonitorPedNoise.cfg
+++ b/test/MonitorO2O/template_SiStripMonitorPedNoise.cfg
@@ -10,8 +10,8 @@ process TEST = {
             
     es_source = PoolDBESSource { 
 	VPSet toGet = {
-	    { string record = "SiStripPedestalsRcd" string tag = "SiStripPedestals_pass4_test_v1_p" }, { string record = "SiStripNoisesRcd" string tag = "SiStripNoises_pass4_test_v1_n" }
-	    , { string record = "SiStripFedCablingRcd" string tag = "SiStripCabling_pass4_test_v1" }
+	    { string record = "SiStripPedestalsRcd" string tag = "insert_tagP" }, { string record = "SiStripNoisesRcd" string tag = "insert_tagN" }
+	    , { string record = "SiStripFedCablingRcd" string tag = "insert_tagCab" }
 	}
 	
 	string connect = "insert_DBfile"
