write sqlite file

--- a/test/GREN_RIB_o2o.cfg
+++ b/test/GREN_RIB_o2o.cfg
@@ -40,8 +40,8 @@ process o2o = {
 
     
     service = PoolDBOutputService{
-	#string connect = "sqlite_file:dbfile.db"    
-	string connect = "oracle://orcon/CMS_COND_ON_170_STRIP"    
+	string connect = "sqlite_file:dbfile.db"    
+	#string connect = "oracle://orcon/CMS_COND_ON_170_STRIP"    
 	string timetype = "runnumber"    
 	untracked string BlobStreamerName="TBufferBlobStreamingService"
 	PSet DBParameters = {
