--- a/test/UploadDB/template_sistripo2o.cfg
+++ b/test/UploadDB/template_sistripo2o.cfg
@@ -20,12 +20,13 @@ process o2o = {
 	untracked    bool UsingDb         = true
 	untracked  string ConfDb          = "cms_tracker_tif2/stabletif2@cms_tec_lyon"
 	untracked  string Partition       = "insert_ConfigDbPartition"
-	untracked uint32 MajorVersion = 0 //@@ cabling
-	untracked uint32 MinorVersion = 0 //@@ cabling
-	untracked uint32 FedMajorVersion = insert_fedmajor
-	untracked uint32 FedMinorVersion = insert_fedminor
-	untracked uint32 FecMajorVersion = 1
-	untracked uint32 FecMinorVersion = 0
+	untracked  uint32 RunNumber       = insert_Run
+#	untracked uint32 MajorVersion = 0 //@@ cabling
+#	untracked uint32 MinorVersion = 0 //@@ cabling
+#	untracked uint32 FedMajorVersion = insert_fedmajor
+#	untracked uint32 FedMinorVersion = insert_fedminor
+#	untracked uint32 FecMajorVersion = 1
+#	untracked uint32 FecMinorVersion = 0
     }
 
 
@@ -40,19 +41,22 @@ process o2o = {
 
     
     service = PoolDBOutputService{
-	string connect = "sqlite_file:dbfile.db"    
+	
+	string connect = "insert_connect_string"    
+	#string connect = "sqlite_file:dbfile.db"    
 	#string connect = "oracle://cms_orcoff_int2r/CMS_COND_STRIP"    
-	string timetype = "runnumber"    
+	untracked string timetype = "runnumber"    
+
 	untracked string BlobStreamerName="TBufferBlobStreamingService"
 	PSet DBParameters = {
-	    untracked string authenticationPath="/afs/cern.ch/cms/DB/conddb"
+	    untracked string authenticationPath="insert_authPath"
 	    untracked uint32 messagelevel = 4 
 	}
 	 
 	VPSet toPut={ 
-	    { string record = "SiStripPedestalsRcd"  string tag = "SiStripPedestals_pass4_test_v1_p"} ,
-	    { string record = "SiStripNoisesRcd"     string tag = "SiStripNoises_pass4_test_v1_n"} ,
-	    { string record = "SiStripFedCablingRcd" string tag = "SiStripCabling_pass4_test_v1"} 
+	    { string record = "SiStripPedestalsRcd"  string tag = "insert_pedestals_tag"} ,
+	    { string record = "SiStripNoisesRcd"     string tag = "insert_noise_tag"} ,
+	    { string record = "SiStripFedCablingRcd" string tag = "insert_cabling_tag"} 
 	}
     }    
     
