--- a/test/testPopCon/testConditionAccess_sqlite_TIF.cfg
+++ b/test/testPopCon/testConditionAccess_sqlite_TIF.cfg
@@ -4,9 +4,9 @@ process Test = {
     
     source = EmptyIOVSource {
 	string timetype = "runnumber"
-        uint64 firstValue = 7000
-	uint64 lastValue = 7000
-        uint64 interval = 1
+	untracked uint32 firstRun = 7000
+	untracked uint32 lastRun = 7000
+        uint32 interval = 1
     }
     
     service = MessageLogger {
