--- a/test/testPopCon/testSiStripPopCon_8046.cfg
+++ b/test/testPopCon/testSiStripPopCon_8046.cfg
@@ -4,7 +4,7 @@ process o2o = {
 	untracked vstring destinations = { "cout" }
 	untracked PSet cout = { untracked string threshold = "DEBUG" }
 	untracked vstring debugModules   = { "*" }
-    }
+    } 
     
     source = EmptyIOVSource {
 	string timetype = "runnumber"
@@ -35,11 +35,11 @@ process o2o = {
 	untracked string timetype = "runnumber"    
 	untracked string BlobStreamerName="TBufferBlobStreamingService"
 	VPSet toPut={ 
-	    { string record = "SiStripPedestalsRcd"  string tag = "SiStripPedestals_TIF_20X"} ,
-	    { string record = "SiStripNoisesRcd"     string tag = "SiStripNoise_TIF_20X"} ,
-	    { string record = "SiStripThresholdRcd"  string tag = "SiStripThreshold_TIF_20X"} ,
-	    { string record = "SiStripBadStrip"      string tag = "SiStripBadChannel_TIF_20X"} ,
-	    { string record = "SiStripFedCablingRcd" string tag = "SiStripFedCabling_TIF_20X"} 
+	    { string record = "SiStripPedestalsRcd"  string tag = "SiStripPedestals_TIF_21X"} ,
+	    { string record = "SiStripNoisesRcd"     string tag = "SiStripNoise_TIF_21X"} ,
+	    { string record = "SiStripThresholdRcd"  string tag = "SiStripThreshold_TIF_21X"} ,
+	    { string record = "SiStripBadStrip"      string tag = "SiStripBadChannel_TIF_21X"} ,
+	    { string record = "SiStripFedCablingRcd" string tag = "SiStripFedCabling_TIF_21X"} 
 	}
 	untracked string logconnect = "sqlite_file:log.db"	
     }    
@@ -49,7 +49,7 @@ process o2o = {
 	bool SinceAppendMode = true
 	PSet Source ={
 	    untracked uint32 since = 8046 
-	    untracked bool debug = true
+	    #untracked bool debug = true
 	}
     }
 
