global changes to cfg and py declaration of EmptyIOVSource to adapt to the new syntax (CMSSW savannah task 7959)

--- a/test/GREN_RIB_o2o.cfg
+++ b/test/GREN_RIB_o2o.cfg
@@ -8,9 +8,9 @@ process o2o = {
     
     source = EmptyIOVSource {
 	string timetype = "runnumber"
-        untracked uint32 firstRun = 20
-	untracked uint32 lastRun  = 20
-        uint32 interval = 1
+        uint64 firstValue = 20
+	uint64 lastValue  = 20
+        uint64 interval = 1
     }
     untracked PSet maxEvents = {untracked int32 input = 1}
   
