--- a/test/MonitorO2O/template_SiStripMonitorPedNoise.cfg
+++ b/test/MonitorO2O/template_SiStripMonitorPedNoise.cfg
@@ -28,9 +28,9 @@ process TEST = {
         
     source = EmptyIOVSource {
         string timetype = "runnumber"
-	untracked uint32 firstRun = insert_runNb 
-        untracked uint32 lastRun = insert_runNb
-        uint32 interval = 1
+	uint64 firstValue = insert_runNb 
+        uint64 lastValue = insert_runNb
+        uint64 interval = 1
     }
     untracked PSet maxEvents = {untracked int32 input = 1}
 
