--- a/test/UploadDB/template_sistripo2o.cfg
+++ b/test/UploadDB/template_sistripo2o.cfg
@@ -8,9 +8,9 @@ process o2o = {
     
     source = EmptyIOVSource {
 	string timetype = "runnumber"
-        untracked uint32 firstRun = insert_Run
-	untracked uint32 lastRun = insert_Run
-        uint32 interval = 1
+        uint64 firstValue = insert_Run
+	uint64 lastValue = insert_Run
+        uint64 interval = 1
     }
     untracked PSet maxEvents = {untracked int32 input = 1}
   
